# chess

./: README.md
client/: index.html  script.js  style.css
server/: Cargo.toml
server/src/: chess.rs  main.rs
server/tests/: chess_mate.rs
